# Outlookcopilot2API

./: .env.example  .gitignore  README.md  TECH.md  pyproject.toml
src/outlook_copilot/: __init__.py  auth.py  browser_auth.py  client.py  models.py  payload.py
src/outlook_copilot/scripts/: setup_wizard.py
src/outlook_copilot/servers/: cli.py  openai.py
tests/: test_browser_auth.py  test_client.py  test_openai.py  test_payload.py
